# TFG

./: Extracciones.csv  extracciones_prueba.csv  main.py
Fase1/dnp3/: CMakeLists.txt  autogen.sh  configure.ac  default.config  meson.build  t2plconf
Fase1/dnp3/doc/: dnp3.tex
Fase1/dnp3/src/: Makefile.am  dnp3.c  dnp3.c~  dnp3.h  dnp3.h~
Fase1/dnp3/tests/: dnp3.flags
Fase2/: Timestamp.csv  deteccionAnomalias.py  extracciones_prueba.csv  formattedfile.csv  main.py
